guitar_event guitar_learning 完成

--- a/web012 0531/guitar_history.htm
+++ b/web012 0531/guitar_history.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>guitar_history</title>
     <style>
         body {
             background-image: url(./pic/0101.jpg);
@@ -48,13 +48,13 @@
     </header>
     <div class="row">
         <div class="btn">
-            <a href="_top">回社團介紹首頁</a>
+            <a href="index.html">回社團介紹首頁</a>
         </div>
         <div class="btn">
-            <a href="#">吉他社近期活動公告</a>
+            <a href="guitar_event.htm">吉他社近期活動公告</a>
         </div>
         <div class="btn">
-            <a href="#">吉他社教學內容</a>
+            <a href="guitar_learning.htm">吉他社教學內容</a>
         </div>
     </div>
     <div class="content">
