--- a/web012 0531/guitar_learning.htm
+++ b/web012 0531/guitar_learning.htm
@@ -33,6 +33,8 @@
 
         #item {
             color: deeppink;
+            /* font-style: italic;斜體 要背 */
+            font-style: italic;
         }
 
         #item:hover {
@@ -50,7 +52,8 @@
     <div class="container">
         <div class="row btn_Row">
             <div class="btn">
-                <a href="index.html">回社團介紹首頁</a>
+                <!-- target="_top"要背 -->
+                <a href="index.html" target="_top">回社團介紹首頁</a>
             </div>
             <div class="btn">
                 <a href="guitar_history.htm">吉他社社史</a>
