--- a/web012 0531/guitar_event.htm
+++ b/web012 0531/guitar_event.htm
@@ -49,11 +49,13 @@
         .active{
             font-size: 16px;
             font-family: '標楷體';
+            flex-basis: 70%;
         }
         .btn_Top{
-            display: flex;
+            /* display: flex;
             justify-content: center;
-            margin: auto;
+            margin: auto; */
+            flex-basis: 30%;
         }
 
         #d1{
@@ -82,7 +84,8 @@
     <div class="container">
         <div class="row btn_Row">
             <div class="btn">
-                <a href="index.html">回社團介紹首頁</a>
+                <!-- target="_top" 要背 -->
+                <a href="index.html" target="_top">回社團介紹首頁</a>
             </div>
             <div class="btn">
                 <a href="guitar_history.htm">吉他社社史</a>
