--- a/web012 0531/guitar_history.htm
+++ b/web012 0531/guitar_history.htm
@@ -48,7 +48,8 @@
     </header>
     <div class="row">
         <div class="btn">
-            <a href="index.html">回社團介紹首頁</a>
+            <!-- target="_top" 要背 -->
+            <a href="index.html" target="_top">回社團介紹首頁</a>
         </div>
         <div class="btn">
             <a href="guitar_event.htm">吉他社近期活動公告</a>
