--- a/web012 0531/index.html
+++ b/web012 0531/index.html
@@ -78,6 +78,8 @@
 
         .club_Btn {
             height: 35px;
+
+            width: 200px;
             text-align: center;
             /* margin: auto; */
             justify-content: center;
@@ -163,7 +165,8 @@
             <aside class="aside">
                 <div class="aside_menu">
                     <div class="club_Title">社團介紹</div>
-                    <div class="club_Btn"><a href="guitar_history.htm">吉他社</a></div>
+                    <!--  target="myIframe" 要背 -->
+                    <div class="club_Btn"><a href="guitar_history.htm" target="myIframe">吉他社</a></div>
                     <div class="club_Btn">熱舞社</div>
                     <div class="club_Btn">棒球社</div>
                     <div class="club_Btn">羽球社</div>
@@ -179,7 +182,8 @@
                     <marquee behavior="" direction="">「歡迎光臨校園社團介紹網，參觀後請支持社團活動並熱烈參與」</marquee>
                 </div>
                 <div class="main_content">
-                    <iframe src="main.htm" frameborder="0"></iframe>
+                    <!-- 記得加上name='myIfranme' 要背 -->
+                    <iframe src="main.htm" frameborder="0" name="myIframe"></iframe>
                 </div>
             </main>
 
